table ratio tweak

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -41,6 +41,7 @@ body {
   top: 5%;
   bottom: 25%;
   border-radius: 50%;
+  max-width: 1400px;
   background: url("https://www.ethereum.org/images/Ethereum-BGD_4K_2.png") center center no-repeat #161c30;
   box-shadow: 1px 1px 10px black;
 }
