--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -45,6 +45,15 @@ $dark: #222;
   transform: translateY(-33%);
 }
 
+@mixin no-text-select {
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
+  -khtml-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+}
+
 .browsehappy {
   margin: 0.2em 0;
   background: #ccc;
@@ -53,6 +62,7 @@ $dark: #222;
 }
 
 body {
+  @include no-text-select;
   font-family: 'Source Sans Pro', sans-serif;
 }
 
@@ -237,16 +247,16 @@ body {
       border-left: none;
     }
   }
-  .pot {
-    text-align: center;
-    position: absolute;
-    color: white;
-    font-size: 18px;
-    left: 45%;
-    right: 45%;
-    top: 65%;
-    bottom: 35%;
-  }
+}
+.pot {
+  text-align: center;
+  position: absolute;
+  color: white;
+  font-size: 18px;
+  left: 47%;
+  right: 45%;
+  top: 45%;
+  bottom: 45%;
 }
 
 .chips-1 {
@@ -256,11 +266,16 @@ body {
   bottom: 50%;
   right: 72%;
 
+}
+
+.pot, .chips-1{
   .pile-label {
     color: white;
     position: absolute;
     bottom: -25px;
-    left: 10px;
+  }
+  .chip div {
+    margin-right: 1px;
   }
 }
 
@@ -275,7 +290,11 @@ body {
     color: white;
     position: absolute;
     bottom: -25px;
-    right: 10px;
+    right: 0;
+  }
+
+  .chip div {
+    margin-left: 1px;
   }
 }
 
